--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "angular-datatables": "^12.0.0",
+    "angular-notifier": "^9.0.1",
     "bootstrap": "^4.1.0",
     "datatables.net": "^1.10.20",
     "datatables.net-bs4": "^1.10.20",
