--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "datatables.net": "^1.10.20",
     "datatables.net-bs4": "^1.10.20",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "ngx-quill": "^14.0.0",
     "popper.js": "^1.16.1",
     "quill": "^1.3.7",
