--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod --base-href=\"https://shunco.github.io/curso-angular/\" --output-hashing=all; npx angular-cli-ghpages --dir=dist/tecgurus"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +20,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-cli-ghpages": "^0.6.2",
     "angular-datatables": "^12.0.0",
     "angular-notifier": "^9.0.1",
     "bootstrap": "^4.4.0",
@@ -27,7 +29,7 @@
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "ngx-quill": "^14.0.0",
+    "ngx-quill": "^5.2.0",
     "popper.js": "^1.16.1",
     "quill": "^1.3.7",
     "rxjs": "~6.4.0",
